# obese_classifier

./: .gitignore  README.md  pyproject.toml
data/: data_card.ods
notebooks/: 00.0-am-template.ipynb
notebooks/mg/: 00.0-mg-dataprocess.ipynb  00.1-mg-analyzingnumericaldata.ipynb  00.2-mg-model.ipynb
references/: links.md
src/: train.py
src/uafscs/models/: baseline.py
src/uafscs/utils/: console_utils.py  data_utils.py
